--- a/CreateDataset.ipynb
+++ b/CreateDataset.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,12 @@
     "import math\n",
     "import random\n",
     "import csv\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from PIL import Image\n",
     "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "from skimage import io\n",
     "import torchvision.datasets as datasets\n",
     "from torch.utils.data import Dataset\n",
@@ -119,47 +122,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# suibclass of Dataset class to load images and labels\n",
-    "class ImageDataset(Dataset):\n",
-    "    def __init__(self, csv_annotation, root_dir, transform=None):\n",
-    "        \n",
-    "        \"\"\"\n",
-    "        Arguments:\n",
-    "            csv_file (string): Path to the csv file with annotations.\n",
-    "            root_dir (string): Directory with all the images.\n",
-    "            transform (callable, optional): Optional transform to be applied\n",
-    "                on a sample.\n",
-    "        \"\"\"\n",
-    "        self.frame = pd.read_csv(csv_annotation)\n",
-    "        self.root_dir = root_dir\n",
-    "        self.transform = transform\n",
-    "\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.frame)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        if torch.is_tensor(idx):\n",
-    "            idx = idx.tolist()\n",
-    "\n",
-    "        image_name = os.path.join(self.root_dir, self.frame.iloc[idx, 0])\n",
-    "        image_name = image_name + '.jpg'\n",
-    "        image = io.imread(image_name)\n",
-    "\n",
-    "        sample = {'image': image, 'label': self.frame.iloc[idx, 1]}\n",
-    "\n",
-    "        if self.transform:\n",
-    "            sample = self.transform(sample)\n",
-    "        \n",
-    "        return sample    "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -221,23 +183,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load data into pytorch dataset and test ImageDatset\n",
-    "\n",
-    "transform = transforms.Compose([\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[194.69792020561766, 139.26262746509832, 145.48524135685338], std=[22.855094582223956, 30.168411555547745, 33.903190491317204])\n",
-    "])\n",
-    "\n",
-    "training_data = ImageDataset(csv_annotation='Data/HAM100000_train_label.csv', root_dir='Data/HAM100000_images_train/', transform=transform)\n",
-    "test_data = ImageDataset(csv_annotation='Data/HAM100000_test_label.csv', root_dir='Data/HAM100000_images_test/', transform=transform)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
@@ -252,11 +197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load dataset\n",
+    "batch_size = 32\n",
+    "shuffle = True\n",
     "\n",
     "transform = transforms.Compose([\n",
     "    transforms.ToTensor(),\n",
@@ -266,18 +213,39 @@
     "# to use these data needs to be in class folders\n",
     "\n",
     "train_dataset = datasets.ImageFolder(root='Data/HAM100000_images_train/', transform=transform)\n",
-    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=shuffle)\n",
     "\n",
     "test_dataset = datasets.ImageFolder(root='Data/HAM100000_images_test/', transform=transform)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=True)\n"
+    "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "2\n",
+      "<class 'torch.Tensor'>\n",
+      "torch.Size([32, 3, 450, 600])\n",
+      "<class 'torch.Tensor'>\n",
+      "torch.Size([32])\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = next(iter(train_loader))\n",
+    "print(type(test))\n",
+    "print(len(test))\n",
+    "print(type(test[0]))\n",
+    "print(test[0].shape)\n",
+    "print(type(test[1]))\n",
+    "print(test[1].shape)"
+   ]
   },
   {
    "attachments": {},
@@ -285,6 +253,163 @@
    "metadata": {},
    "source": [
     "## Model 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class net(nn.Module):\n",
+    "    def __init__(self, dropout = False):\n",
+    "        super(net, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=3, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(in_channels=16, out_channels=32, kernel_size=3, padding=1)\n",
+    "        \n",
+    "        self.fc1 = nn.Linear(32 * 75 * 100, 120)\n",
+    "        self.fc2 = nn.Linear(120, 84)\n",
+    "        self.fc3 = nn.Linear(84, 7)\n",
+    "\n",
+    "        # less droupout in deeper layers\n",
+    "        self.dropout = False \n",
+    "        self.dropout_3 = nn.Dropout(p=0.3) \n",
+    "        self.dropout_5 = nn.Dropout(p=0.5)\n",
+    "    def forward(self, x, train=True):\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.conv2(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = x.view(-1, 32 * 75 * 100)\n",
+    "        x = self.fc1(x)\n",
+    "        x = F.relu(x)\n",
+    "        if train and self.dropout:\n",
+    "            x = self.dropout_5(x)    \n",
+    "        x = self.fc2(x)\n",
+    "        x = F.relu(x)\n",
+    "        if train and self.dropout:\n",
+    "            x = self.dropout_3(x)\n",
+    "        x = self.fc3(x)\n",
+    "        \n",
+    "        return x\n",
+    "\n",
+    "classes = ('akiec', 'bcc', 'bkl', 'df', 'mel', 'nv', 'vasc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train loop\n",
+    "def train_model(model, data_loader, epochs, lr=0.1, optim=None):\n",
+    "  if optim is None:\n",
+    "    optimizer = torch.optim.SGD(params=model.parameters(), lr=lr)\n",
+    "  else:\n",
+    "    optimizer = optim\n",
+    "  loss_fn = nn.CrossEntropyLoss()\n",
+    "  \n",
+    "  model.to(device)\n",
+    "  for epoch in range(epochs):\n",
+    "    epoch_loss = 0\n",
+    "    for batch, (X, y) in enumerate(data_loader):\n",
+    "      X = X.to(device)\n",
+    "      y = y.to(device)\n",
+    "      y_pred = model(X)\n",
+    "      y_one_hot = torch.nn.functional.one_hot(y, num_classes=7)\n",
+    "      loss = loss_fn(y_pred, y_one_hot)\n",
+    "      epoch_loss += loss\n",
+    "      optimizer.zero_grad()\n",
+    "      loss.backward()\n",
+    "      optimizer.step()\n",
+    "    print(f\"average batch loss in {epoch+1}: {epoch_loss/batch_size}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test loop\n",
+    "def test_model(model, data_loader):\n",
+    "  model.to(device)\n",
+    "  with torch.no_grad():\n",
+    "    right, wrong = np.array([0 for i in range(10)]), np.array([0 for i in range(10)])\n",
+    "    for batch, (X,y) in enumerate(data_loader):\n",
+    "      X = X.to(device)\n",
+    "      y = y.to(device)\n",
+    "      y_pred = model(X, train=False)\n",
+    "      y_pred = torch.argmax(y_pred, dim=1)\n",
+    "      for i in range(len(y_pred)):\n",
+    "        if y_pred[i]==y[i]:\n",
+    "          right[y[i]] += 1\n",
+    "        else:\n",
+    "         wrong[y[i]] += 1\n",
+    "\n",
+    "  for i in range(10):\n",
+    "    print(f\"accuracy for {classes[i]}: {right[i]}/{right[i]+wrong[i]} | accuracy in %: {right[i]/(right[i]+wrong[i])*100}\")\n",
+    "  \n",
+    "  print(f\"overall accuracy: {np.sum(right)} / {np.sum(right) + np.sum(wrong)} | accuracy in percent % {100*np.sum(right)/(np.sum(right) + np.sum(wrong))}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = next(iter(train_loader))\n",
+    "model_0 = net()\n",
+    "bing = model_0(test[0])\n",
+    "# train_model(model_0, train_loader, epochs=3, lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1152, 7])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 3, 450, 600])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(bing.shape)\n",
+    "test[0].shape"
    ]
   }
  ],
