added csv loader

--- a/CreateDataset.ipynb
+++ b/CreateDataset.ipynb
@@ -1,18 +1,8 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load Data\n",
-    "create a pytorch Dataset from MVS10015 Dataset\n",
-    "pytorch [documentaion](https://pytorch.org/tutorials/beginner/basics/data_tutorial.html)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +21,29 @@
     "import torch.nn.functional as F\n",
     "from skimage import io\n",
     "import torchvision.datasets as datasets\n",
-    "from torch.utils.data import Dataset\n",
+    "from torch.utils.data import TensorDataset, DataLoader, Dataset\n",
     "import torchvision.transforms as transforms\n",
     "from torch.utils.data import DataLoader\n",
     "import matplotlib.pyplot as plt\n",
     "from torchvision.io import read_image\n",
     "import skimage.io as io"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (600,450)\n",
+    "creates dataloader, that holds a tensor representation of the whole (600,450) image. This is to big to work with.v"
    ]
   },
   {
@@ -245,6 +252,83 @@
     "print(test[0].shape)\n",
     "print(type(test[1]))\n",
     "print(test[1].shape)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (28,28)\n",
+    "With the dataset there comes a csv containing the same images compressed to (28,28), in a csv file. This is better to work with."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate train/test split\n",
+    "random.seed(42)\n",
+    "test_split  = set()\n",
+    "while len(test_split) < 2000:\n",
+    "    test_split.add(random.randint(0, 10015-1)) # HAM10000 has 10015 images\n",
+    "\n",
+    "#read csv file into list\n",
+    "\n",
+    "with open('Data/hmnist_28_28_RGB.csv') as file:\n",
+    "    csv_reader = csv.reader(file)\n",
+    "    next(csv_reader)\n",
+    "    data = []\n",
+    "    for row in csv_reader:\n",
+    "        data.append(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset\n",
+    "\n",
+    "class CSV_Data(Dataset):\n",
+    "    def __init__(self, data, labels):\n",
+    "        self.data = data\n",
+    "        self.labels = labels\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.data[idx], self.labels[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 32\n",
+    "shuffle = True\n",
+    "\n",
+    "train_input = []\n",
+    "train_labels = []\n",
+    "test_input = []\n",
+    "test_labels = []\n",
+    "\n",
+    "for index, image in enumerate(data):\n",
+    "    image = [float(pixel) for pixel in image]\n",
+    "    if index in test_split:\n",
+    "        test_input.append(torch.tensor([image[:-1][0:28*28], image[:-1][28*28:2*28*28], image[:-1][2*28*28:]])) # 3 channels\n",
+    "        test_labels.append(torch.tensor(image[-1]))\n",
+    "    else:\n",
+    "        train_input.append(torch.tensor([image[:-1][0:28*28], image[:-1][28*28:2*28*28], image[:-1][2*28*28:]]))\n",
+    "        train_labels.append(torch.tensor(image[-1]))\n",
+    "train_loader = DataLoader(CSV_Data(train_input, train_labels), batch_size=batch_size, shuffle=shuffle)\n",
+    "test_loader = DataLoader(CSV_Data(test_input, test_labels), batch_size=batch_size, shuffle=False)"
    ]
   },
   {
